--- a/demos/start-of-day/package.json
+++ b/demos/start-of-day/package.json
@@ -10,9 +10,8 @@
         "build:all": "concurrently \"ng build welcome\" \"ng build clients\" \"ng build news\" \"ng build portfolio\" \"ng build transactions\"",
         "build:allW": "concurrently \"ng build --watch welcome\" \"ng build --watch clients\" \"ng build --watch news\" \"ng build --watch portfolio\" \"ng build --watch transactions\"",
         "build:allP": "concurrently \"ng build --prod welcome\" \"ng build --prod clients\" \"ng build --prod news\" \"ng build --prod portfolio\" \"ng build --prod transactions\"",
-        "build:prod": "npm run build:allP && gluec build && node build.js",
-        "start": "npm run build:all && npm run serve",
-        "serve": "gluec serve"
+        "build:prod": "npm run build:allP && node build.js",
+        "start": "npm run build:all"
     },
     "private": true,
     "dependencies": {
@@ -25,11 +24,8 @@
         "@angular/platform-browser": "~9.1.0",
         "@angular/platform-browser-dynamic": "~9.1.0",
         "@angular/router": "~9.1.0",
-        "@glue42/gateway-web": "^3.0.9-beta.2",
-        "@glue42/ng": "^1.1.2",
-        "@glue42/worker-web": "^1.0.5",
-        "@glue42/workspaces-api": "^1.0.0",
-        "@glue42/workspaces-app": "^1.1.4",
+        "@glue42/ng": "^2.0.5",
+        "@glue42/workspaces-api": "^1.4.1",
         "@ng-bootstrap/ng-bootstrap": "^7.0.0",
         "ag-grid-angular": "^23.2.1",
         "ag-grid-community": "^23.2.1",
@@ -49,7 +45,6 @@
         "@angular/cli": "~9.1.0",
         "@angular/compiler-cli": "~9.1.0",
         "@angular/language-service": "~9.1.0",
-        "@glue42/cli-core": "^1.3.1",
         "@types/jasmine": "~3.5.0",
         "@types/jasminewd2": "~2.0.3",
         "@types/node": "^12.11.1",
