--- a/live-examples/channels/App/package.json
+++ b/live-examples/channels/App/package.json
@@ -3,8 +3,8 @@
   "version": "0.0.0",
   "scripts": {
     "ng": "ng",
-    "start": "ng serve",
-    "build": "ng build --source-map=false",
+    "start": "cross-env NG_CLI_ANALYTICS=false && ng serve",
+    "build": "cross-env NG_CLI_ANALYTICS=false && ng build --source-map=false",
     "test": "ng test",
     "lint": "ng lint",
     "e2e": "ng e2e"
@@ -35,6 +35,7 @@
     "@types/node": "^12.11.1",
     "@types/jasmine": "~3.5.0",
     "@types/jasminewd2": "~2.0.3",
+    "cross-env": "5.2.0",
     "codelyzer": "^5.1.2",
     "jasmine-core": "~3.5.0",
     "jasmine-spec-reporter": "~4.2.1",
