--- a/docs/developers/02_reference/01_core/config.json
+++ b/docs/developers/02_reference/01_core/config.json
@@ -1,6 +1,5 @@
 {
     "menuItem": "Glue42 Web",
     "title": "Glue42 Web",
-    "displayTitle": true,
-    "expanded": true
+    "displayTitle": true
 }
