--- a/tutorials/javascript/start/package.json
+++ b/tutorials/javascript/start/package.json
@@ -3,10 +3,10 @@
   "version": "1.0.0",
   "description": "Glue42 Core JavaScript Tutorial",
   "scripts": {
-    "start:clients": "http-server ./Clients -p 9000",
-    "start:stocks": "http-server ./Stocks -p 9100",
-    "start:clientDetails": "http-server ./client-details -p 9200",
-    "start:workspace": "http-server ./workspace -p 9300",
+    "start:clients": "http-server ./Clients -p 9000 -c-1",
+    "start:stocks": "http-server ./Stocks -p 9100 -c-1",
+    "start:clientDetails": "http-server ./client-details -p 9200 -c-1",
+    "start:workspace": "http-server ./workspace -p 9300 -c-1",
     "start": "concurrently \"npm run start:clients\" \"npm run start:stocks\" \"npm run start:clientDetails\" \"npm run start:workspace\""
   },
   "keywords": [],
